argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-map
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-04b5eb113400ab20e, subnet-09160367d715c0cc9
spec:
  defaultBackend:
    service:
      name: map
      port:
        number: 80
  rules:
    - host:
      http:
        paths:
          - path: /map
            pathType: Prefix
            backend:
              service:
                name: map
                port:
                  number: 80
